--- a/_posts/2012-10-19-css-bfc.md
+++ b/_posts/2012-10-19-css-bfc.md
@@ -1,71 +1,9 @@
 ---
 layout: post
 title: BFC(Block Formatting Context)
-describe: (未完成)详说BFC，BFC的触发条件，BFC的作用，外边距叠加
+describe: BFC的触发条件，BFC的作用
 ---
-
-在平时写CSS中会经常发现浏览器的一个bug，外边距叠加现象。
-
-1.	如果元素没有垂直边框或者内边距，就会发生外边距叠加。<a href="/code/execeses/margin-colloge.html">运行</a>
-
-		<div id="box">
-			<p>This is a box.</p>
-		</div>
-
-		#box {
-			margin: 10px;
-			background-color: #d5d5d5;
-		}
-		#box p {
-			margin: 20px;
-			background-color: #6699ff;
-		}
-
-	可以看到段落的20像素的margin和div的10像素的margin叠加形成一个20像素的margin。这是由于具有块级子元素的元素计算其高度的方式造成的。以及，两个块级元素的外边距不是两个的margin和。
-
-	解决这种可以添加内边距和垂直边框：<a href="/code/execeses/margin.html">运行</a>
-
-		#box {
-			margin: 10px;
-			padding: 10px; // 或者 border: 1px solid #fff;
-			background-color: #bcc7cf;
-		}
-		#box p {
-			margin: 20px;
-			background-color: #93daa6;
-		}
-
-	但很多情况下，我们不需要内边距或者边框怎么办？在上次的《BFC(Block Formatting Context)》中介绍过，可以把父元素形成为BFC，从而解决叠加。
-
-		#box {
-			margin: 10px;
-			overflow: hidden;
-			background-color: #bcc7cf;
-		}
-		#box p {
-			margin: 20px;
-			background-color: #93daa6;
-		}
-
-2.	两个相邻的块级元素的垂直方向上发生的外边距叠加。
-
-		<div id="green"></div>
-    	<div id="blue"></div>
-    	
-		#green {
-	      width: 100px;
-	      height: 100px;
-	      background-color: #93daa6;
-	      margin: 10px;
-	    }
-
-	    #blue {
-	      width: 100px;
-	      height: 100px;
-	      background-color: #b8f2f6;
-	      margin: 10px;
-	    }
-
+[w3c Recommendation BFC](http://www.w3.org/TR/CSS2/visuren.html#block-formatting)
 
 
 ##	BFC是什么？
@@ -74,10 +12,22 @@ Block Formatting Contexts (块级格式化上下文)，提供一个环境，HTML
 
 ## BFC形成的条件
 
-*	float的元素(float不为none)
+> Floats, absolutely positioned elements, block containers (such as inline-blocks, table-cells, and table-captions) that are not block boxes, and block boxes with 'overflow' other than 'visible' (except when that value has been propagated to the viewport) establish new block formatting contexts for their contents.
+
+*	float的元素
+*	绝对定位的元素position为absolute
 *	overflow不为visitable
 *	display为inline-block,table-cell,table-caption
-*	position不为relative和static
+
+## BFC的作用
+1.	阻止外边距叠加
+	[外边距叠加](/2012-10-20-margin-collapsing.html)
+ 	 
+2.	清除内部浮动
+	overflow: hidden;
+	[清除浮动](/2012-03-15-clear-float.html)
+
+3.	不会和float的元素重叠
 
 
 
